--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "firebase": "^9.9.0",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "md5": "^2.3.0",
+    "mongodb": "^4.7.0",
     "next": "12.2.1",
+    "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
+    "pdfmake": "^0.2.5",
+    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^4.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.19.0",
