--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "webpack": "^5.0.0-beta.28"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
