--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "^5.0.0-beta.28"
   },
   "dependencies": {
+    "@mongodb-js/zstd": "^1.0.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "snappy": "^7.1.1",
     "tailwindcss": "^3.1.5",
     "uuid": "^8.3.2"
   },
