--- a/package.json
+++ b/package.json
@@ -8,22 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "resolutions": {
-    "webpack": "^5.0.0-beta.28"
-  },
   "dependencies": {
     "@mongodb-js/zstd": "^1.0.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
-    "firebase": "^9.9.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "jspdf": "^2.5.1",
     "md5": "^2.3.0",
     "mongodb": "^4.7.0",
     "mongodb-client-encryption": "^2.1.0",
     "next": "12.2.1",
+    "node-loader": "^2.0.0",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "pdfmake": "^0.2.5",
