--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "fs": "^0.0.1-security",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
     "md5": "^2.3.0",
     "mongodb": "^4.7.0",
     "mongodb-client-encryption": "^2.1.0",
@@ -34,6 +36,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1"
   }
